<resources>
    <string name="app_name">pmproject</string>
    <string name="text_view_training_date">Training date</string>
    <string name="text_view_training_duration">Training duration</string>
    <string name="text_view_workout_type">Workout type</string>
    <string name="text_view_progress_date">Progress date</string>
    <string name="button_start">Start</string>
    <string name="text_view_select_type">Select workout type</string>
    <string name="new_training">New training</string>
    <string name="new_progress">New progress</string>
    <string name="training_history">Training history</string>
    <string name="progress_history">Progress history</string>
    <string name="statistics">Statistics</string>
    <string name="home">Home</string>
    <string name="button_pause">Pause</string>
    <string name="button_save">Save</string>
    <string name="button_add_field">Add field</string>
    <string name="text_view_burned_calories_label">Burned calories</string>
    <string name="main_menu">Main menu</string>
    <string name="field_chest_circumference">Chest circumference</string>
    <string name="text_view_progress_date_label">Progress date</string>
    <string name="notification_text">You have not trained for 7 days. Do it now!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="delete_label">Delete this item?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_delete">Delete</string>
    <string name="button_ok">Ok</string>
    <string name="edit">edit</string>
</resources>
