<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".view.activity.WorkoutDetalisActivity"
    android:id="@+id/constraintLayout">

    <TextView
        android:id="@+id/text_view_workout_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_view_workout_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_workout_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@+id/text_view_workout_type_label"
        app:layout_constraintTop_toTopOf="@+id/text_view_workout_type_label" />

    <TextView
        android:id="@+id/text_view_training_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_view_training_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_workout_type_label" />

    <TextView
        android:id="@+id/text_view_training_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@+id/text_view_training_date_label"
        app:layout_constraintTop_toTopOf="@+id/text_view_training_date_label" />

    <TextView
        android:id="@+id/text_view_training_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_view_training_duration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_training_date_label" />

    <TextView
        android:id="@+id/text_view_training_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@+id/text_view_training_time_label"
        app:layout_constraintTop_toTopOf="@+id/text_view_training_time_label" />

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_training_time">

    </LinearLayout>

    <Button
        android:id="@+id/button_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@+id/parent_linear_layout" />

</android.support.constraint.ConstraintLayout>