<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".view.activity.SaveNewWorkoutActivity">

    <TextView
        android:id="@+id/text_view_workout_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_view_workout_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_workout_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@+id/text_view_workout_type_label"
        app:layout_constraintTop_toTopOf="@+id/text_view_workout_type_label" />

    <TextView
        android:id="@+id/text_view_training_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_view_training_date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_workout_type_label" />

    <TextView
        android:id="@+id/text_view_training_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@+id/text_view_training_date_label"
        app:layout_constraintTop_toTopOf="@+id/text_view_training_date_label" />

    <TextView
        android:id="@+id/text_view_training_time_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/text_view_training_duration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_training_date_label" />

    <TextView
        android:id="@+id/text_view_training_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintLeft_toRightOf="@+id/text_view_training_time_label"
        app:layout_constraintTop_toTopOf="@+id/text_view_training_time_label" />

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/text_view_training_time">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/field_burned_calories"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:editable="false"
                android:enabled="false"
                android:inputType="phone"
                android:text="@string/text_view_burned_calories_label" />

            <EditText
                android:id="@+id/value_edit_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:inputType="phone" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:drawable/ic_delete"
                android:onClick="onDelete" />
        </LinearLayout>
    </LinearLayout>



    <Button
        android:id="@+id/add_field_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#555"
        android:onClick="onAddField"
        android:text="Add Field"
        android:textColor="#FFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_linear_layout" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="#555"
        android:onClick="save"
        android:text="@string/button_save"
        android:textColor="#FFF"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_field_button" />

</android.support.constraint.ConstraintLayout>