<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".view.activity.NewWorkoutActivity">

    <TextView
        android:id="@+id/text_view_select_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:text="@string/text_view_select_type" />

    <Spinner
        android:id="@+id/spinner_workout_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_view_select_type_label" />

    <Chronometer
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="40sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_workout_type" />

    <ImageButton
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/button_start"
            android:layout_alignTop="@id/button_start"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:onClick="stopWorkout"
            app:layout_constraintCircle="@id/button_start"
            app:layout_constraintCircleAngle="120"
            app:layout_constraintCircleRadius="48dp"
            app:srcCompat="@mipmap/stop_icon"
            tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:onClick="startWorkout"
        android:stateListAnimator="@null"
        android:text="@string/button_start"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chronometer" />

    <Button
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/button_pause"
            android:onClick="pauseWorkout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:stateListAnimator="@null"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/button_stop"/>

</android.support.constraint.ConstraintLayout>